# mcp-agg

./: .env.example  .windsurfrules  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 78df465a4bd3_add_mcp_tokens_table.py  84086008430a_create_initial_tables.py  a7ff9e8af12d_add_slack_credentials_table.py
api/: database.py  dependencies.py  main.py  models.py  schemas.py
api/apps/: __init__.py  crud.py
api/apps/github/: __init__.py  client.py  models.py  routes.py  schemas.py  tools.py  utils.py
api/apps/slack/: client.py  models.py  routes.py  schemas.py  tools.py  utils.py
api/auth/: crud.py  utils.py
api/routers/: apps.py  auth.py  health.py  tools.py
docker/api/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docs/: DESIGN.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/api/core/: OpenAPI.ts
frontend/src/api/models/: App.ts  Body_login_api_v1_token_post.ts  ExecuteToolRequest.ts  ExecuteToolResponse.ts  GitHubCredential.ts  Tool.ts  (+6 more)
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx  index.ts
frontend/src/pages/: AppConfig.tsx  Apps.tsx  AppsList.tsx  Dashboard.tsx  Login.tsx  MCPUrl.tsx  Register.tsx  ToolsList.tsx  index.ts
scripts/: generate_openapi.py  generate_openapi_spec.py  generate_openapi_spec_no_db.py  index_docs_github.py  index_docs_llmtxt.py
tests/: conftest.py  test_database.py
tests/integration/: test_tool_endpoints.py
(+9 files in other folders)
